# frostflake-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
assets/: app.manifest
src/: main.rs  registry.rs  server.rs  utils.rs  windows.rs
