[package]
name = "frostflake-rs"
version = "1.3.1"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["matched-path", "ws"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "macro-diagnostics"] }
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Data_Xml_Dom", "UI_Notifications"] }
winreg = "0.10"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tokio-util = "0.7.12"

[build-dependencies]
winres = "0.1"
