[package]
name = "frostflake-rs"
version = "1.3.1"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["matched-path", "ws"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "macro-diagnostics"] }
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Data_Xml_Dom", "UI_Notifications"] }
winreg = "0.10"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
tracing-log = ["tracing", "tracing-subscriber"]

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
