[package]
name = "frostflake-rs"
version = "1.3.2"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "matched-path", "original-uri", "ws"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.19", features = ["v4"] }
windows = { version = "0.61", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Data_Xml_Dom", "UI_Notifications"] }
winreg = "0.55"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
	"env-filter",
] }
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
	"default-tls",
	"charset",
	"macos-system-configuration",
	"json",
	"stream"
] }
futures = "0.3"

[features]
default = []
tracing = [
	"axum/tower-log",
	"axum/tracing",
	"tower-http/trace",
	"dep:tracing",
	"dep:tracing-subscriber",
]

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
# panic = "abort"
